# rust-opengl-learning

./: Cargo.toml
assets/shaders/: triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
src/: main.rs  triangle.rs
src/render_gl/: buffer.rs  viewport.rs
